--- a/templates/base.html
+++ b/templates/base.html
@@ -191,6 +191,7 @@
     {% compress js %}
     <!-- Custom JavaScript -->
     <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'js/datetime-config.js' %}"></script>
     {% endcompress %}
     
     {% block extra_js %}{% endblock %}
